# muse-challenge

./: .gitignore  journal-de-liaison.md  philosophie-et-intention.md  protocole-echange.md  pyproject.toml  rapport-phase-6.md  rapport-phases-1-4.md  reponse-hub-phases-1-4.md
muses/: __init__.py  client.py
muses/analysis/: __init__.py  coherence.py  federated_links.py  matcher.py  summary.py
muses/api/: __init__.py  server.py
tests/muses/: test_api_server.py  test_client_degraded.py
